--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-future
-emoji
+#library 
 redis
 lxml
-beautifulsoup4
 requests
-sqlalchemy
-python-telegram-bot==12.8
+sqlalchemy>=1.3.20
+pyrogram>=1.0.7
+TgCrypto>=1.2.2
+telegraph>=1.4.1
+telethon>=1.17.5
 psycopg2-binary
 feedparser
 pynewtonmath
@@ -14,20 +15,23 @@ zalgo-text
 geopy
 nltk
 psutil
-aiohttp>=2.2.5
-Pillow>=4.2.0
+bleach>=3.2.1
+emoji>=0.6.0
+future>=0.18.2
+markdown2>=2.3.10
+Pillow>=8.0.1
+PyYAML>=5.3.1
 CurrencyConverter
 googletrans==3.1.0a0
-jikanpy
+jikanpy>=4.2.2
 speedtest-cli
 coffeehouse
 regex
 bleach
 git+https://github.com/starry69/python-markdown2.git
 wikipedia
-telethon
-spamwatch
+spamwatch>=0.3.0
 alphabet_detector
-pyrate-limiter
+pyrate-limiter>=2.0.3
 cachetools
-
+beautifulsoup4>=4.9.3
